--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "node-sass": "^5.0.0",
     "rollup-plugin-scss": "^2.6.1",
     "sirv-cli": "^1.0.0",
-    "svelte-preprocess": "^4.6.1",
-    "svelte-routing": "^1.5.0"
+    "svelte-preprocess": "^4.6.1"
   }
 }
